WRR-11138: Fixed `Slider` and `IncrementSlider` knob alignment in Electro skin (#820)
* Fixed slider knob alignment

* Fixed `Slider` knob alignment and `IncrementSlider` vertical alignment

* Added padding on ss-tests for `Slider` and `IncrementSlider` with vertical orientation

* Removed padding on ss-tests for `Slider` and `IncrementSlider` with vertical orientation

* Added CHANGELOG

--- a/IncrementSlider/IncrementSlider.module.less
+++ b/IncrementSlider/IncrementSlider.module.less
@@ -102,6 +102,7 @@
 				order: 2;
 				margin: @agate-incrementslider-vertical-slider-margin;
 				padding: @agate-incrementslider-vertical-slider-padding;
+				transform: @agate-incrementslider-bg-transform-vertical;
 
 				&::before {
 					border-radius: @agate-incrementslider-border-radius;
